--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   potty_db:
     image: postgres:13.0-alpine
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     env_file: db.env
   potty_web:
     build: .
@@ -18,3 +18,6 @@ services:
       - app.env
     depends_on:
       - potty_db
+
+volumes:
+  postgres_data:
