--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
+asgiref==3.5.2
+Django==3.2.15
+djangorestframework==3.13.1
+psycopg2==2.9.3
+pytz==2022.2.1
+sqlparse==0.4.2
