--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.2.15
 django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
+drf-extensions==0.7.1
 psycopg2==2.9.3
 PyJWT==2.4.0
 pytz==2022.2.1
